# generated/java/src/main/java/com/blizzardapi/openapi/model/PlayableClassDetailsDTO.java
@@ -2,7 +2,7 @@
  * Blizzard API
  * An OpenAPI specification for Blizzard API
  *
- * The version of the OpenAPI document: 0.3.0
+ * The version of the OpenAPI document: 0.3.1
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -70,7 +70,7 @@ public class PlayableClassDetailsDTO {
 
   public static final String SERIALIZED_NAME_POWER_TYPE = "power_type";
   @SerializedName(SERIALIZED_NAME_POWER_TYPE)
-  private NameDataDTO powerType;
+  private IndexDataDTO powerType;
 
   public static final String SERIALIZED_NAME_SPECIALIZATIONS = "specializations";
   @SerializedName(SERIALIZED_NAME_SPECIALIZATIONS)
@@ -140,7 +140,7 @@ public class PlayableClassDetailsDTO {
   }
 
 
-  public PlayableClassDetailsDTO powerType(NameDataDTO powerType) {
+  public PlayableClassDetailsDTO powerType(IndexDataDTO powerType) {
     this.powerType = powerType;
     return this;
   }
@@ -150,11 +150,11 @@ public class PlayableClassDetailsDTO {
    * @return powerType
   **/
   @javax.annotation.Nonnull
-  public NameDataDTO getPowerType() {
+  public IndexDataDTO getPowerType() {
     return powerType;
   }
 
-  public void setPowerType(NameDataDTO powerType) {
+  public void setPowerType(IndexDataDTO powerType) {
     this.powerType = powerType;
   }
 
@@ -356,7 +356,7 @@ public class PlayableClassDetailsDTO {
       // validate the required field `gender_name`
       GenderDTO.validateJsonElement(jsonObj.get("gender_name"));
       // validate the required field `power_type`
-      NameDataDTO.validateJsonElement(jsonObj.get("power_type"));
+      IndexDataDTO.validateJsonElement(jsonObj.get("power_type"));
       // ensure the json data is an array
       if (!jsonObj.get("specializations").isJsonArray()) {
         throw new IllegalArgumentException(String.format("Expected the field `specializations` to be an array in the JSON string but got `%s`", jsonObj.get("specializations").toString()));
